hphp/hack/test/typecheck/constraints/class_type_constant2.php
<?hh

interface Constraint<T as num> {}

abstract class InvalidConstraint {
  abstract const type T as Vector<Constraint<string>>;
}
